# dprint

./: LICENSE  README.md  pyproject.toml
dprint/: __init__.py  _impl.py
tests/: test_dprint.py
